2013-08-05  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h (enum __socket_type):
	Add SOCK_CLOEXEC, SOCK_NONBLOCK with values from FreeBSD.
	(SOCK_MAX, SOCK_TYPE_MASK): New macros.

2013-08-03  David S. Miller  <davem@davemloft.net>

	* po/ko.po: Update Korean translation from translation project.

2013-08-01  David S. Miller  <davem@davemloft.net>

	* manual/contrib.texi: Update entry for Siddhesh Poyarekar.  Add
	entries for Will Newton, Andi Kleen, David Holsgrove, and Ondrej
	Bilka.

2013-07-30  David S. Miller  <davem@davemloft.net>

	* po/fr.po: Update French translation from translation project.

2013-07-28  David S. Miller  <davem@davemloft.net>

	* po/cs.po: Update Czech translation from translation project.

	* po/sv.po: Update Swedish translation from translation project.

2013-07-27  David S. Miller  <davem@davemloft.net>

	* po/eo.po: Update Esperanto translation from translation project.

	* po/vi.po: Update Vietnamese translation from translation project.

	* po/de.po: Update German translation from translation project.

2013-07-26  David S. Miller  <davem@davemloft.net>

	* po/bg.po: Update Bulgarian translation from translation project.

	* po/nl.po: Update Dutch translation from translation project.
	* po/pl.po: Update Polish translation from translation project.
	* po/ru.po: Update Russian translation from translation project.

2013-07-24  David S. Miller  <davem@davemloft.net>

	* po/libc.pot: Update.

2013-07-23  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/dl-static.c: New file to support
	variable page size.
	* sysdeps/unix/sysv/linux/powerpc/ldsodefs.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/Makefile: Build dl-static in elf.
	* sysdeps/unix/sysv/linux/powerpc/Versions: Add _dl_var_init.

2013-07-22  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/fpu/libm-test-ulps: Refresh.

2013-07-21  Siddhesh Poyarekar  <siddhesh@redhat.com>