@@ -1,5 +1,8 @@
 2013-08-05  Roland McGrath  <roland@hack.frob.com>
 
+	* sysdeps/unix/bsd/bsd4.4/bits/socket.h: Moved to ...
+	* bits/socket.h: ... here.
+
 	* sysdeps/unix/bsd/bsd4.4/bits/socket.h (enum __socket_type):
 	Add SOCK_CLOEXEC, SOCK_NONBLOCK with values from FreeBSD.
 	(SOCK_MAX, SOCK_TYPE_MASK): New macros.
